tests/csmith/bad/smith000436.c
/*
 * This is a RANDOMLY GENERATED PROGRAM.
 *
 * Generator: csmith 2.0.0
 * svn version: exported
 * Options:   --check-global -s 436
 * Seed:      436
 */

#include "random_runtime.h"


long __undefined;

/* --- Struct/Union Declarations --- */
/* --- GLOBAL VARIABLES --- */
int64_t g_8 = 0xF0AA6E6F7FBF2121LL;
int32_t g_10 = -1L;
int32_t * volatile g_9 = &g_10;/* VOLATILE GLOBAL g_9 */
int16_t g_12 = 9L;


/* --- FORWARD DECLARATIONS --- */
int16_t  func_1(void);


/* --- FUNCTIONS --- */
/* ------------------------------------------ */
/* 
 * reads : g_8 g_9 g_10 g_12
 * writes: g_10 g_12
 */
int16_t  func_1(void)
{ /* block id: 0 */
    int32_t l_2 = 0xC7CE53D8L;
    int32_t *l_11 = 0;
lbl_5:
    l_2 ^= 0xEA5D6C05L;
    for (l_2 = 0; (l_2 <= -29); l_2 = safe_add_func_uint64_t_u_u(l_2, 1))
    { /* block id: 4 */
        if (l_2)
            goto lbl_5;
        for (l_2 = -24; (l_2 >= 0); l_2 = safe_add_func_uint64_t_u_u(l_2, 1))
        { /* block id: 8 */
            (*g_9) = g_8;
        }
    }
    g_12 ^= (*g_9);
    return g_12;
}




/* ---------------------------------------- */
int main (int argc, char* argv[])
{
    func_1();
    printf("checksum g_8 = %d\n", g_8);
    printf("checksum g_10 = %d\n", g_10);
    printf("checksum g_12 = %d\n", g_12);
}

/************************ statistics *************************
XXX max struct depth: 0
breakdown:
   depth: 0, occurrence: 6

XXX max expression depth: 0
breakdown:
   depth: 0, occurrence: 4

XXX total number of pointers: 2

XXX times a variable address is taken: 1
XXX times a pointer is dereferenced on RHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is dereferenced on LHS: 1
breakdown:
   depth: 1, occurrence: 1
XXX times a pointer is compared with null: 0
XXX times a pointer is compared with address of another variable: 0
XXX times a pointer is compared with another pointer: 0
XXX times a pointer is qualified to be dereferenced: 2

XXX max dereference level: 1
breakdown:
   level: 0, occurrence: 0
   level: 1, occurrence: 3
XXX number of pointers point to pointers: 0
XXX number of pointers point to scalars: 2
XXX number of pointers point to structs: 0
XXX percent of pointers has null in alias set: 50
XXX average alias set size: 1

XXX times a non-volatile is read: 5
XXX times a non-volatile is write: 5
XXX times a volatile is read: 1
XXX    times read thru a pointer: 0
XXX times a volatile is write: 1
XXX    times written thru a pointer: 0
XXX times a volatile is available for access: 1
XXX percentage of non-volatile access: 83.3

XXX forward jumps: 0
XXX backward jumps: 1

XXX stmts: 14

XXX percentage a fresh-made variable is used: 60
XXX percentage an existing variable is used: 40
********************* end of statistics **********************/

